--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1"
